--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,13 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 lzw = "0.10"
+
+# NOTE: for cmd only -- lib has no optional features
+termcolor = { version = "1.0.4", optional = true }
+
+[features]
+cmd = ["termcolor"]
+
+[[bin]]
+name = "gift"
+required-features = ["cmd"]
