--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,5 @@
-disable_all_formatting = true
 max_width = 80
-fn_args_density = "Compressed"
+fn_args_layout = "Compressed"
 indent_style = "Visual"
 enum_discrim_align_threshold = 40
 match_block_trailing_comma = true
