--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ readme = "README.md"
 keywords = ["gif", "image"]
 categories = ["multimedia", "encoding"]
 edition = "2018"
+include = ["src/**/*", "Cargo.*", "LICENSE-*", "README.md", "CHANGELOG.md"]
 
 [dependencies]
 log = "0.4"
 lzw = "0.10"
-pix = "0.7"
+pix = "0.10"
 
 # NOTE: for cmd only -- library has no optional features
 clap = { version = "2.33", optional = true }
