--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,7 +1,8 @@
-max_width = 80
-fn_args_layout = "Compressed"
-indent_style = "Visual"
 enum_discrim_align_threshold = 40
+fn_args_layout = "Tall"
+hard_tabs = false
+indent_style = "Visual"
 match_block_trailing_comma = true
-use_field_init_shorthand = true
+max_width = 80
 overflow_delimited_expr = true
+use_field_init_shorthand = true
