--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 keywords = ["gif", "image"]
 categories = ["multimedia", "encoding"]
 edition = "2018"
-include = ["src/**/*", "Cargo.*", "LICENSE-*", "README.md", "CHANGELOG.md"]
+include = ["src/**/*", "Cargo.*", "LICENSE-*", "README.md", "CHANGELOG.md", "benches/*"]
 
 [dependencies]
 log = "0.4"
