--- a/gift-bin/Cargo.toml
+++ b/gift-bin/Cargo.toml
@@ -13,7 +13,7 @@ edition.workspace = true
 [dependencies]
 clap = "2.33"
 env_logger = "0.9"
-gift = "0.10.6"
+gift = { workspace = true }
 termcolor = "1"
 
 [[bin]]
